app/assets/stylesheets/tablednd.css
body {
    color:#333333;
    font-family:'Lucida Grande',Verdana,Arial,Sans-Serif;
    font-size: 80%;
    /*margin: 1em 9em;*/
    background-color: #F5F5F5;
    line-height: 1.4em;
}

p {
}

h1 {
}

pre {
    background-color:#F0F0F0;
    font-weight:normal;
    line-height:1.1;
    padding:12px;
}

pre, code {
    color:#264A94;
    font-family:Monaco,Lucida Console,monospace;
    font-size:90%;
}

div#page {
    background-color: white;
    padding: 1em;
}

.tableDemo {
    background-color: white;
    border: 1px solid #666699;
    margin-right: 10px;
    padding: 6px;
}

.tableDemo table {
    border: 1px solid silver;
}

.tableDemo td {
 padding: 2px 6px
}

.tableDemo th {
    background-color:#29215A;
    color:white;
}

#table-2 th {
    background-color: #29215A;
    color: white;
}

#table-2 td, th {
    padding-right: 8px;
}

.category td {
    background-color: #E4EBF3;
}

.tDnD_whileDrag {
    background-color: #eee;
}

tr.alt td {
    background-color: #ecf6fc;
}

tr.myDragClass td {
    color: yellow;
    background-color: black;
}

td.dragHandle {
    
}

td.showDragHandle {
	background-image: url(images/updown2.gif);
	background-repeat: no-repeat;
	background-position: center center;
	cursor: move;
}

.versionHistory td {
    vertical-align: top;
    padding: 0.3em;
}

